# mcp-server-mssql

./: .bumpversion.cfg  CHANGELOG.md  README.md  SKILL.md  SPEC.md  mcp.json  pyproject.toml  server.json
.github/workflows/: mcp-publish.yml  pypi-publish.yml
src/mcp_server_mssql/: __init__.py  __main__.py  server.py
tests/: conftest.py  test_server.py
